--- a/html/index.html
+++ b/html/index.html
@@ -296,6 +296,7 @@
             color: white;
             cursor: pointer;
             font-weight: bold;
+            transition: all 0.3s ease;
         }
         button:hover {
             background: #45a049;
